fix(supplier): one partnerId rule, and keep a codec's parameter order
Three review findings, two of which were the same defect in two places.

The Michelin S2S spec requires partnerId on every call: it is how the vendor
knows which service centre is asking, and a fleet authorization from an
unidentified caller is not something any vendor grants. The request path treated
a missing billing account number as the deployment defect it is. The poller and
the approver quietly substituted an empty string and carried on.

That difference was invisible at every call site and wrong in both. The poller
would have re-asked a vendor that had already rejected the request as
unidentified, once per tick, until the pending timeout expired a day later — and
then reported a misconfiguration on this side as a vendor that never decided.
The approver was worse: it would have spent its entire retry budget on a call
that could never succeed, escalating a money-critical completion approval with a
review reason blaming the vendor. Both now resolve partnerId through one shared
rule, S2SPartnerId, and park the row immediately when it is missing, because no
number of attempts supplies an account number nobody configured. FleetLookupRunner
had a fourth copy of the same check and now uses the shared one too.

Separately, SupplierHttpRequest copied its query parameters and headers with
Map.copyOf, which gives no ordering guarantee. SupplierRequestSpec takes explicit
care to preserve insertion order — with a comment saying why — and the query
string is built by iterating the map, so the copy discarded the ordering one
layer after it was deliberately established. The same request could go out with
its parameters in a different sequence on different runs, which is invisible in a
passing test and awkward in vendor-side logs and in the exchange audit, where two
exchanges are compared to work out why one failed. The queryParams half predates
this branch; the headers half was introduced with it.

Supplier